--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,120 +1,297 @@
 $PRIMARY_COLOR: #f69323;
-*
-	font-family: 'Poppins',sans-serif !important
-	outline: none
-	&:focus,&:hover,&:focus-whitin
-			outline: none
-ul
-	list-style-type: none
-	margin: 0
-	padding: 0
 .transition
 	transition: .3s all ease
-.fa
-	font: normal normal normal 14px/1 FontAwesome !important
-a
-	color: #000000
-	&:hover
-		color: #000000
-		text-decoration: none
+.aft-bef
+	content: ''
+	position: absolute
 body
-	header
-		.head_top
-			margin: 30px 0
-			.order_call
+	.slider
+		color: #ffffff
+		.slide1
+			height: 80vh
+			.container-fluid
+				width: 100%
+				height: 100%
+				background: url('../img/slide1.jpg')
+		.slide2
+			height: 80vh
+			.container-fluid
+				width: 100%
+				height: 100%
+				background: url('../img/slide2.jpg')
+		.container
+			height: 100%
+			.row
 				display: flex
-				justify-content: flex-end
-				button
-					background: transparent
-					text-transform: uppercase
-					font-weight: bold
-					color: $PRIMARY_COLOR
-					border: 2px solid $PRIMARY_COLOR
-					padding: 10px 20px
-					cursor: pointer
-					@extend .transition
-					&:hover
-						background: $PRIMARY_COLOR
+				flex-direction: column
+				height: 100%
+				justify-content: center
+				align-items: flex-start
+				.title
+					h1
+						font-size: 70px
+						font-weight: bold
+				.description
+					font-size: 20px
+				.buttons
+					button
+						@extend .transition
+						border: none
+						background: transparent
 						color: #ffffff
-			.info
-				display: flex
-				flex-direction: row
-				.icon
+						cursor: pointer
+						padding: 15px 30px
+						text-transform: uppercase
+						font-weight: bold
+						font-size: 14px
+						margin-right: 20px
+						&:nth-child(1)
+							background: #ffffff
+							color: $PRIMARY_COLOR
+							&:hover
+								background: $PRIMARY_COLOR
+								color: #ffffff
+								transform: scale(1.1)
+						&:last-child
+							background: $PRIMARY_COLOR
+							color: #ffffff
+							&:hover
+								background: #ffffff
+								color: $PRIMARY_COLOR
+								transform: scale(1.1)
+	.about_us
+		margin-bottom: 70px
+		.container
+			.row
+				.title
+					text-align: center
+					margin: 40px 0
+					margin-top: 60px
+					h2
+						font-size: 40px
+						font-weight: bold
+				.description
+					color: #646e7a
+					text-align: center
+					font-size: 18px
+				.advanced
+					padding: 10px
+					.item
+						height: 100%
+						@extend .transition
+						background: #f2f2f2
+						border: 1px solid #dfdfdf
+						padding: 10px
+						.description
+							text-align: left
+							padding: 20px
+							height: 100%
+							background: #ffffff
+							position: relative
+							i
+								color: #cccccc
+								font-size: 70px !important
+							h3
+								color: #24262a
+								font-weight: bold
+								font-size: 16px
+								text-transform: uppercase
+								margin: 20px 0
+							p
+								color: #333333
+								font-size: 14px
+							a
+								position: absolute
+								cursor: pointer
+								bottom: 0
+								right: 0
+								background-color: $PRIMARY_COLOR
+								border: none
+								display: flex
+								height: 35px
+								width: 35px
+								justify-content: center
+								align-items: center
+								i
+									font-size: 16px !important
+									color: #ffffff
+						&:hover
+							background: lighten($PRIMARY_COLOR,30%)
+							.description
+								i
+									color: $PRIMARY_COLOR
+								a
+									@extend .transition
+									background: #333333
+	.experience
+		padding-top: 30px
+		margin-bottom: 70px
+		border-top: 1px solid #dfdfdf
+		.container
+			.row
+				.image
+					border-bottom: 5px solid $PRIMARY_COLOR
+				.description
+					.title
+						display: flex
+						justify-content: center
+						align-items: center
+						span
+							color: $PRIMARY_COLOR
+							font-size: 60px
+							font-weight: bold
+							display: flex
+							margin-right: 20px
+						h2
+							margin-top: 5px
+							font-weight: bold
+							text-transform: uppercase
+							font-size: 24px
+					.baners
+						h3
+							text-transform: uppercase
+							font-weight: bold
+							font-size: 20px
+						button
+							border: 1px solid $PRIMARY_COLOR
+							background: $PRIMARY_COLOR
+							color: #ffffff
+							font-size: 20px
+							font-weight: bold
+							width: 45%
+							border-radius: 50px
+							padding: 18px 40px
+							margin-right: 10px
+							i
+								font-size: 20px !important
+							a
+								color: #ffffff
+							span
+								color: $PRIMARY_COLOR
+							&:last-child
+								background: #ffffff
+								color: #333333
+	.process
+		background: url('../img/process_bg.jpg')
+		background-size: cover
+		padding: 50px 0
+		color: #ffffff
+		.container
+			.row
+				.title
+					text-align: center
+					margin-bottom: 25px
+					h2
+						font-weight: bold
+						font-size: 36px
+				.description
+					text-align: center
+					margin-bottom: 30px
+				&:last-child
 					display: flex
 					justify-content: center
 					align-items: center
-					img
-						height: 30px
-						width: 30px
+					.title
+						display: flex
+						justify-content: center
+						align-items: center
+						margin: 0
+						span
+							@extend .transition
+							color: $PRIMARY_COLOR
+							font-weight: bold
+							font-size: 60px
+							margin-right: 20px
+						h3
+							@extend .transition
+							text-align: left
+							font-weight: bold
+		&:hover
+			.container
+				.row
+					&:last-child
+						.title
+							span
+								color: #ffffff
+							h3
+								color: $PRIMARY_COLOR
+	.callback
+		margin-top: 70px
+		.container
+			.row
 				.description
-					margin-left: 10px
-					font-size: 14px
-					p
-						margin-bottom: 0
-						color: $PRIMARY_COLOR
+					.title
+						h2
+							text-transform: uppercase
+							font-weight: bold
+							font-size: 24px
+						p
+							font-size: 14px
+					form
+						display: flex
+						flex-wrap: wrap
+						position: relative
+						input,textarea
+							@extend .transition
+							padding: 10px
+							width: 70%
+							margin: 10px
+							border: 2px solid #dfdfdf
+							&:focus
+								border-color: $PRIMARY_COLOR
+						button
+							@extend .transition
+							margin-left: 50px
+							background-color: $PRIMARY_COLOR
+							border: 2px solid $PRIMARY_COLOR
+							border-radius: 5px
+							color: #ffffff
+							font-weight: bold
+							text-transform: uppercase
+							position: absolute
+							right: 0
+							bottom: -80px
+							height: 50px
+							width: 170px
+							cursor: pointer
+							&:hover
+								background: #ffffff
+								color: $PRIMARY_COLOR
+	.counter
+		background: url('../img/counter_bg.jpg')
+		background-size: cover
+		color: #ffffff
+		padding: 80px 0
+		.container
+			.row
+				.title
+					text-align: center
 					h2
 						font-weight: bold
-						font-size: 14px
-		.container-fluid:nth-child(2)
-			background: #343434
-			padding: 0
-			.container
-				.head_lower
+						font-size: 36px
+				.description
 					display: flex
-					justify-content: space-between
-					.header_navigation
-						ul
-							display: flex
-							li
-								position: relative
+					justify-content: center
+					align-items: center
+					margin: 40px 0
+					p
+						text-align: center
+						width: 70%
+				&:last-child
+					display: flex
+					justify-content: center
+					.item
+						h3
+							@extend .transition
+							font-size: 60px
+							font-weight: bold
+							margin: 0
+						p
+							@extend .transition
+							color: $PRIMARY_COLOR
+							text-transform: uppercase
+							font-weight: bold
+							font-size: 18px
+							span
 								@extend .transition
-								&:after
-									position: absolute
-									top: 50%
-									bottom: 0
-									right: 0
-									content: ''
-									width: 1px
-									height: 50px
-									background-color: #000000
-									transform: translateY(-50%)
-								&:last-child
-									&:after
-										display: none
-								&:hover
-									transition: 0
-									background-color: $PRIMARY_COLOR
-									&:after
-										display: none
-								a
-									padding: 25px 20px
-									display: block
-									color: #ffffff
-							.active
-								background-color: $PRIMARY_COLOR
-								&:after
-									display: none
-					.social
-						ul
-							display: flex
-							li
-								a
-									display: block
-									padding: 15px 5px
-									i
-										@extend .transition
-										color: $PRIMARY_COLOR
-										font-size: 17px !important
-										display: flex
-										justify-content: center
-										align-items: center
-										border: 1px solid #ffffff
-										border-radius: 50%
-										width: 40px
-										height: 40px
-									&:hover
-										i
-											background-color: $PRIMARY_COLOR
-											color: #ffffff
-	footer
-		.footer_top
+								color: #ffffff
